--- a/.github/workflows/preprocessing.yml
+++ b/.github/workflows/preprocessing.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Commit and Push Clean Data
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "lLuckyFzi"
+          git config --global user.email "levryn04@gmail.com"
           
           git add preprocessing/heart_disease_preprocessing/heart_disease_clean.csv
           
