--- a/.github/workflows/modelling.yml
+++ b/.github/workflows/modelling.yml
@@ -28,5 +28,4 @@ jobs:
           MLFLOW_TRACKING_USERNAME: ${{ secrets.DAGSHUB_USERNAME }}
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
-          # Perintah untuk menjalankan MLflow Project
-          mlflow run Workflow_Machine_Learning --no-conda
+          mlflow run Workflow_Machine_Learning --env-manager local
