--- a/.github/workflows/modelling.yml
+++ b/.github/workflows/modelling.yml
@@ -28,4 +28,5 @@ jobs:
           MLFLOW_TRACKING_USERNAME: ${{ secrets.DAGSHUB_USERNAME }}
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
+          # Running
           mlflow run Workflow_Machine_Learning --env-manager local
