--- a/.github/workflows/modelling.yml
+++ b/.github/workflows/modelling.yml
@@ -1,33 +1,33 @@
-name: Machine Learning Workflow
+name: MLflow CI Training
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - 'Workflow_Machine_Learning/**'
+    branches: [ main ]
 
 jobs:
-  train-model:
+  train:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Set up job
+        run: echo "Start job"
+
+      - name: Run actions/checkout@v3
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python 3.12.7
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: "3.12.7"
+
+      - name: Check Env
+        run: python --version
 
       - name: Install dependencies
         run: |
-          pip install mlflow dagshub pandas scikit-learn matplotlib seaborn
+          pip install -r Membangun_model/requirements.txt
 
-      - name: Run MLflow Project
-        env:
-          MLFLOW_TRACKING_USERNAME: ${{ secrets.DAGSHUB_USERNAME }}
-          MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
-          MLFLOW_TRACKING_URI: "https://dagshub.com/lLuckyFzi/heart-disease-msml.mlflow"
+      - name: Run mlflow project
         run: |
-          # Running
-          mlflow run Workflow_Machine_Learning --env-manager local
+          cd Workflow_Machine_Learning
+          mlflow run .
